--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
-    "sonner-native": "^0.20.0"
+    "sonner-native": "^0.20.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -46,6 +47,7 @@
     "@types/react": "^19.0.0",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.0.0",
+    "@types/uuid": "^10.0.0",
     "babel-jest": "^29.7.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
